--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   lottie: ^2.3.2
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
-
+  cloud_firestore: ^4.5.3
+  uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
