--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,15 @@ dependencies:
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.3
   uuid: ^3.0.7
+  mobx: ^2.2.0
+  build_runner: ^2.3.3
+  mobx_codegen: ^2.2.0
+  provider: ^6.0.5
+  flutter_mobx: ^2.0.6+5
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
